--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
             <img src="img/index/carrusel/carr1.jpeg" class="d-block w-100 img-carr" alt="img1">
           </div>
           <div class="carousel-item">
-            <div class="sobreponer-carr izquierda d-flex texto-sobrepuesto">
+            <div class="sobreponer-carr texto-sobrepuesto">
               <h2>¡No te pierdas la promocion!</h2>
               <img src="img/index/promocion.png" class="img-z-carr" alt="">
             </div>
