--- a/register.html
+++ b/register.html
@@ -52,11 +52,11 @@
                 <div class="tab">
                   <p class="subtitulo-registro">Información Básica:</p class="subtitulo-registro">
                   <p><input class="form-control rounded-pill border-0 shadow-sm px-4" placeholder="Nombres"></p>
-                  <p><input class="form-control rounded-pill border-0 shadow-sm px-4" placeholder="Apellido Paterno"></p>
-                  <p><input class="form-control rounded-pill border-0 shadow-sm px-4" placeholder="Apellido Materno"></p>
+                  <p><input class="form-control rounded-pill border-0 shadow-sm px-4" placeholder="Apellidos"></p>
                   <p><input class="form-control rounded-pill border-0 shadow-sm px-4" placeholder="Correo electronico"></p>
                   <p><input class="form-control rounded-pill border-0 shadow-sm px-4" placeholder="Teléfono"></p>
                   <p><input class="form-control rounded-pill border-0 shadow-sm px-4" placeholder="Direccion"></p>
+                  <p><input type="date" class="form-control rounded-pill border-0 shadow-sm px-4" placeholder="Fecha de nacimiento"></p>
                   <p><input type="password" class="form-control rounded-pill border-0 shadow-sm px-4" placeholder="Contraseña"></p>
     
                 </div>
