--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <body>
     <!-- Barra de navegacion -->
     <header>
-    <nav class="navbar navbar-expand-md">
+    <nav class="navbar principal navbar-expand-md fixed-top">
       <div class="container-fluid">
           <a class="navbar-brand" href="#">
             <img src="img/index/logo.png" class="logo" alt="">
@@ -88,86 +88,103 @@
         <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 row-cols-lg-4 row-cols-xl-5 row-cols-xxl-6">
           <div class="col mb-4">
             <a href="#">
-              <div class="card align-items-center">
+              <div class="card especialidades align-items-center">
                 <img src="img/index/especialidades_icon/heart-pulse.svg" class="card-img-top icon-especializacion" alt="...">
                 <div class="card-body">
                   <h5 class="card-title">Cardiología</h5>
                 </div>
               </div>
             </a>
-              
           </div>
           <div class="col mb-4">
-            <div class="card align-items-center">
-              <img src="img/index/especialidades_icon/heart-pulse.svg" class="card-img-top icon-especializacion" alt="...">
-              <div class="card-body">
-                <h5 class="card-title">Cardiología</h5>
+            <a href="#">
+              <div class="card especialidades align-items-center">
+                <img src="img/index/especialidades_icon/heart-pulse.svg" class="card-img-top icon-especializacion" alt="...">
+                <div class="card-body">
+                  <h5 class="card-title">Cardiología</h5>
+                </div>
               </div>
-            </div>
+            </a>
           </div>
           <div class="col mb-4">
-            <div class="card align-items-center">
-              <img src="img/index/especialidades_icon/heart-pulse.svg" class="card-img-top icon-especializacion" alt="...">
-              <div class="card-body">
-                <h5 class="card-title">Cardiología</h5>
+            <a href="#">
+              <div class="card especialidades align-items-center">
+                <img src="img/index/especialidades_icon/heart-pulse.svg" class="card-img-top icon-especializacion" alt="...">
+                <div class="card-body">
+                  <h5 class="card-title">Cardiología</h5>
+                </div>
               </div>
-            </div>
+            </a>
           </div>
           <div class="col mb-4">
-            <div class="card align-items-center">
-              <img src="img/index/especialidades_icon/heart-pulse.svg" class="card-img-top icon-especializacion" alt="...">
-              <div class="card-body">
-                <h5 class="card-title">Cardiología</h5>
+            <a href="#">
+              <div class="card especialidades align-items-center">
+                <img src="img/index/especialidades_icon/heart-pulse.svg" class="card-img-top icon-especializacion" alt="...">
+                <div class="card-body">
+                  <h5 class="card-title">Cardiología</h5>
+                </div>
               </div>
-            </div>
+            </a>
           </div>
           <div class="col mb-4">
-            <div class="card align-items-center">
-              <img src="img/index/especialidades_icon/heart-pulse.svg" class="card-img-top icon-especializacion" alt="...">
-              <div class="card-body">
-                <h5 class="card-title">Cardiología</h5>
+            <a href="#">
+              <div class="card especialidades align-items-center">
+                <img src="img/index/especialidades_icon/heart-pulse.svg" class="card-img-top icon-especializacion" alt="...">
+                <div class="card-body">
+                  <h5 class="card-title">Cardiología</h5>
+                </div>
               </div>
-            </div>
+            </a>
           </div>
           <div class="col mb-4">
-            <div class="card align-items-center">
-              <img src="img/index/especialidades_icon/heart-pulse.svg" class="card-img-top icon-especializacion" alt="...">
-              <div class="card-body">
-                <h5 class="card-title">Cardiología</h5>
+            <a href="#">
+              <div class="card especialidades align-items-center">
+                <img src="img/index/especialidades_icon/heart-pulse.svg" class="card-img-top icon-especializacion" alt="...">
+                <div class="card-body">
+                  <h5 class="card-title">Cardiología</h5>
+                </div>
               </div>
-            </div>
+            </a>
           </div>
           <div class="col mb-4">
-            <div class="card align-items-center">
-              <img src="img/index/especialidades_icon/heart-pulse.svg" class="card-img-top icon-especializacion" alt="...">
-              <div class="card-body">
-                <h5 class="card-title">Cardiología</h5>
+            <a href="#">
+              <div class="card especialidades align-items-center">
+                <img src="img/index/especialidades_icon/heart-pulse.svg" class="card-img-top icon-especializacion" alt="...">
+                <div class="card-body">
+                  <h5 class="card-title">Cardiología</h5>
+                </div>
               </div>
-            </div>
+            </a>
           </div>
           <div class="col mb-4">
-            <div class="card align-items-center">
-              <img src="img/index/especialidades_icon/heart-pulse.svg" class="card-img-top icon-especializacion" alt="...">
-              <div class="card-body">
-                <h5 class="card-title">Cardiología</h5>
+            <a href="#">
+              <div class="card especialidades align-items-center">
+                <img src="img/index/especialidades_icon/heart-pulse.svg" class="card-img-top icon-especializacion" alt="...">
+                <div class="card-body">
+                  <h5 class="card-title">Cardiología</h5>
+                </div>
               </div>
-            </div>
+            </a>
           </div>
           <div class="col mb-4">
-            <div class="card align-items-center">
-              <img src="img/index/especialidades_icon/heart-pulse.svg" class="card-img-top icon-especializacion" alt="...">
-              <div class="card-body">
-                <h5 class="card-title">Cardiología</h5>
+            <a href="#">
+              <div class="card especialidades align-items-center">
+                <img src="img/index/especialidades_icon/heart-pulse.svg" class="card-img-top icon-especializacion" alt="...">
+                <div class="card-body">
+                  <h5 class="card-title">Cardiología</h5>
+                </div>
               </div>
-            </div>
+            </a>
           </div>
           <div class="col mb-4">
-            <div class="card align-items-center">
-              <img src="img/index/especialidades_icon/heart-pulse.svg" class="card-img-top icon-especializacion" alt="...">
-              <div class="card-body">
-                <h5 class="card-title">Cardiología</h5>
+            <a href="#">
+              <div class="card especialidades align-items-center">
+                <img src="img/index/especialidades_icon/heart-pulse.svg" class="card-img-top icon-especializacion" alt="...">
+                <div class="card-body">
+                  <h5 class="card-title">Cardiología</h5>
+                </div>
               </div>
-            </div>
+            </a>
           </div>
         </div>
         <div class="container-fluid" style="height: 50px;"></div>
